# ncmapi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  lib.rs
src/client/: api_request.rs  api_response.rs  mod.rs  route.rs  store.rs
src/crypto/: key.rs  mod.rs
src/types/: mod.rs
