[package]
name = "ncmapi"
version = "0.1.4"
authors = ["akatsuki <akatsuki@gmail.com>"]
edition = "2018"
description = "NetEase Cloud Music API for Rust."
license = "MIT"
homepage = "https://github.com/two-mountains/ncmapi-rs"
documentation = "https://docs.rs/ncmapi"
repository = "https://github.com/two-mountains/ncmapi-rs"
readme = "README.md"
keywords = ["netease-cloud-muisc", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.13"
memory-cache-rs = "0.2.0"
cookie = "0.15"
regex = "1.5"
phf = { version = "0.9", features = ["macros"] }
